--- a/zhixue-uni/manifest.json
+++ b/zhixue-uni/manifest.json
@@ -49,7 +49,7 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-        "appid" : "",
+        "appid" : "wx37c2708e7f0f92dd",
         "setting" : {
             "urlCheck" : true,
             "es6" : true
