--- a/zhixue-uni/manifest.json
+++ b/zhixue-uni/manifest.json
@@ -49,16 +49,12 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-        "appid" : "",
+        "appid" : "wx37c2708e7f0f92dd",
         "setting" : {
-            "urlCheck" : true,
+            "urlCheck" : false,
             "es6" : true
         },
         "usingComponents" : true,
-        "permission" : {
-            "scope.userLocation" : {
-                "desc" : ""
-            }
-        }
+        "permission" : {}
     }
 }
