--- a/zhixue-uni/manifest.json
+++ b/zhixue-uni/manifest.json
@@ -51,7 +51,7 @@
         /* 小程序特有相关 */
         "appid" : "wx37c2708e7f0f92dd",
         "setting" : {
-            "urlCheck" : false,
+            "urlCheck" : true,
             "es6" : true
         },
         "usingComponents" : true,
