--- a/zhixue-uni/manifest.json
+++ b/zhixue-uni/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "zhixue-uni",
+    "name" : "zhixu-uni",
     "appid" : "__UNI__A7C1F6E",
     "description" : "",
     "versionName" : "1.0.0",
